# EZRE

./: LICENSE  README.md  test_all.py
ezre/: __init__.py  core.py  extract.py  patterns.py  pyproject.toml  registry.py  replace.py  validate.py
