[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ezre"
version = "0.1.0"
description = "EZRE: Easy Regex for Python."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    { name = "burritoverflow" }
]
keywords = ["regex", "validation", "extraction", "utility", "python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Filters",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = []

[project.urls]
"Homepage" = "https://github.com/burritoverflow/ezre"
"Repository" = "https://github.com/burritoverflow/ezre"
"Issues" = "https://github.com/burritoverflow/ezre/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ezre*"]
